@@ -3,6 +3,8 @@ This file documents the revision history for Perl extension Catalyst.
 5.56
         - Fixed FastCGI engine to not clobber the global %ENV on each
           request. (Sam Vilain)
+        - Updated benchmarking to work with detach
+        - Fixed dispatcher, so $c->req->action(undef) works again
 
 5.55    2005-11-15 12:55:00
         - Fixed multiple cookie handling
